调整了文件结构

--- a/game.html
+++ b/game.html
@@ -12,12 +12,15 @@
         <script type="text/javascript" src="game/utils.js"></script>
         <script type="text/javascript" src="game/game.js"></script>
         <script type="text/javascript" src="game/gua_image.js"></script>
+        <script type="text/javascript" src="game/particle.js"></script>
         <script type="text/javascript" src="game/scene.js"></script>
         <!-- 场景文件 -->
         <script type="text/javascript" src="scene/scene_main/scene_main.js"></script>
-        <script type="text/javascript" src="scene/scene_main/block.js"></script>
-        <script type="text/javascript" src="scene/scene_main/ball.js"></script>
-        <script type="text/javascript" src="scene/scene_main/paddle.js"></script>
+        <script type="text/javascript" src="scene/scene_main/player.js"></script>
+        <script type="text/javascript" src="scene/scene_main/bullet.js"></script>
+        <script type="text/javascript" src="scene/scene_main/cloud.js"></script>
+        <script type="text/javascript" src="scene/scene_main/enemy.js"></script>
+        <script type="text/javascript" src="scene/scene_main/enemybullet.js"></script>
         <script type="text/javascript" src="scene/scene_main/bg.js"></script>
 
         <script type="text/javascript" src="scene/scene_start/scene_start.js"></script>
